feat: update go.mod & update mocks, sdk, ...
